prometheus/alert-manager-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 35m
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.sahir.k8s-trial-working-day.atix-training.de
    http:
      paths:
      - backend:
          service:
            name: alertmanager
            port:
              number: 9093
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 'alertmanager.sahir.k8s-trial-working-day.atix-training.de'
    secretName: prometeus-tls-secret
