prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 35m
  name: prometheus
  namespace: prometheus
spec:
  rules:
  - host: prometheus.sahir.k8s-trial-working-day.atix-training.de
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 'prometheus.sahir.k8s-trial-working-day.atix-training.de'
    secretName: prometeus-tls-secret
